# mcqpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: mkdocs.yml
docs/docs/: index.md  installation.md
docs/docs/user_guide/: authoring_questions.md  generating_quiz.md  grading.md
pytest/: conftest.py
pytest/building/: test_manifest_build.py  test_pdf_build.py
pytest/cli/: conftest.py  test_autofill_cli.py  test_build_cli.py  test_build_cli_selection.py  test_check_latex_cli.py  test_config_cli.py  test_grade_cli.py  test_init_cli.py  test_main_cli.py  test_question_cli.py
pytest/compile/: test_manifest_build.py  test_misc_compile.py  test_pdf_build.py
pytest/grading/: test_grade_perfect.py  test_grader.py
pytest/question/: .report.xml  test_filters.py  test_manifest_item.py  test_question.py  test_question_bank.py  test_question_code.py  test_question_image.py  test_question_validators.py  test_utils.py
pytest/question/filter/: conftest.py  test_composite_filter.py  test_date_filter.py  test_diff_filter.py  test_filter_factory.py  test_manifest_filter.py  test_slug_filter.py  test_stratified_filter.py  test_tag_filter.py
pytest/resources/code_snippets/: curve_fit.py  example_1.py
pytest/utils/: test_check_latex.py  test_image_utils.py
src/mcqpy/cli/: __init__.py  autofill.py  build.py  config.py  grade.py  init.py  main.py
src/mcqpy/compile/: header_config.py  latex_questions.py  manifest.py  mcq.py  preamble.py  solution_pdf.py
tests/: smoke_test.py
web_quiz/test_quiz/: config.yaml
(+77 files in other folders)
