[project]
name = "mcqpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.3",
    "pydantic>=2.12.0",
    "pylatex>=1.4.2",
    "pypdf>=6.1.1",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
